tests/sksl/errors/ForInitStmt.glsl
### Compilation failed:

error: 1: expected expression, but found 'for'
1 error
